[project]
name = "aoc24"
version = "2024.11"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
fix = true

[tool.ruff.lint]
extend-select = [
    "I", # flake8-import-order
]

[project.scripts]
day01 = "aoc24.day01:solve"
day02 = "aoc24.day02:solve"
day03 = "aoc24.day03:solve"
day04 = "aoc24.day04:solve"
day05 = "aoc24.day05:solve"
day06 = "aoc24.day06:solve"
day07 = "aoc24.day07:solve"
day08 = "aoc24.day08:solve"
day09 = "aoc24.day09:solve"
day10 = "aoc24.day10:solve"
day11 = "aoc24.day11:solve"
day13 = "aoc24.day13:solve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
